incorporated grid-area and organized

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,40 @@ body {
 	margin: 0;
 }
 
+.address {
+	grid-area: a;
+}
+
+.open {
+	grid-area: o;
+}
+
+.food {
+	grid-area: f;
+}
+
+.wifi {
+	grid-area: w;
+}
+
+.content {
+	grid-area: c;
+	h1 {
+		text-align: center;
+	}
+	p {
+		font-size: 1.3em;
+	}
+}
+
+.bottom-question {
+	text-align: center;
+	grid-area: i;
+	max-height: 50px;
+	font-size: 2em;
+	text-decoration: underline;
+}
+
 /*
 	All designs for the buttons are here
 */
