--- a/scss/mobile/styles.scss
+++ b/scss/mobile/styles.scss
@@ -1,52 +1,36 @@
+$sidebarGrid: 
+	"a a a a a a"
+	"c c c c c c"
+	"o o f f w w"
+	". . . . . ."
+	". i i i i .";
+
+
+$mobileGrid: "m" "m" "m" "m" "m" "s" "s";
+
 @media screen and (max-width: 1250px) {
 	#wrapper {
 		display: grid;
-		grid-template-rows: repeat(10, (100vh / 10));
+		grid-template-rows: repeat(7, (100vh / 7));
 		grid-template-columns: 100vw;
-
+		grid-template-areas: $mobileGrid;
 	}
 
 	.map {
-		grid-row: 1/8;
+		grid-area: m;
 	}
 
 	.sidebar {
 		padding: 20px;
-		grid-row: 8/11;
+		grid-area: s;
 		display: grid;
 		grid-template-columns: repeat(6, 1fr);
-		grid-template-rows: repeat(10, (100% / 10));
-
-		.address {
-			grid-column: 1/7;
-			grid-row: 1/3;
-		}
-
-		.open, .food, .wifi {
-			grid-row: 4/6;
-		}
-
-		.open {
-			grid-column: 1/3;
-		}
-
-		.food {
-			grid-column: 3/5;
-		}
-
-		.wifi {
-			grid-column: 5/7;
-		}
-
-		.bottom-question {
-			grid-row: 8/10;
-			grid-column: 3/5;
-			font-size: 2em;
-			text-align: center;
-		}
+		grid-auto-rows: minmax(0, 100px);
+		grid-template-areas: $sidebarGrid;
 	}
 
 	.content {
-		opacity: 0;
+		width: 0;
+		font-size: 0;
 	}
 }
