--- a/scss/mobile/styles.scss
+++ b/scss/mobile/styles.scss
@@ -1,14 +1,15 @@
 $sidebarGrid: 
-	"a a a a a a"
-	"c c c c c c"
-	"o o f f w w"
-	". . . . . ."
-	". i i i i .";
+	"a a a a a a a a a a a a a a"
+	"c c c c c c c c c c c c c c"
+	"o o o o . f f f f . w w w w"
+	". . . . . . . . . . . . . ."
+	". . . . i i i i i i . . . .";
 
 
 $mobileGrid: "m" "m" "m" "m" "m" "s" "s";
 
 @media screen and (max-width: 1250px) {
+
 	#wrapper {
 		display: grid;
 		grid-template-rows: repeat(7, (100vh / 7));
@@ -24,7 +25,7 @@ $mobileGrid: "m" "m" "m" "m" "m" "s" "s";
 		padding: 20px;
 		grid-area: s;
 		display: grid;
-		grid-template-columns: repeat(6, 1fr);
+		grid-template-columns: repeat(14, 1fr);
 		grid-auto-rows: minmax(0, 100px);
 		grid-template-areas: $sidebarGrid;
 	}
