--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,8 @@
 @import 'web/styles';
 @import 'mobile/styles';
 
+$hosfColor: #10B535;
+
 body {
 	padding: 0;
 	margin: 0;
@@ -55,17 +57,27 @@ body {
 .btn-dark, .btn-dark-outline {
 	border-style: solid;
 	border-width: 2px;
-	border-color: rgb(20,49,96);
+	border-color: $hosfColor;
 	transition-duration: 300ms;
 }
 
 .btn-dark {
-	background: rgb(20,49,96);
+	background: $hosfColor;
 	color: whitesmoke;
 }
 
 .btn-dark-outline {
-	color: rgb(20,49,96);
+	color: $hosfColor;
+	background: whitesmoke;
+}
+
+.btn-dark-outline:hover {
+	background: $hosfColor;
+	color: whitesmoke;
+}
+
+.btn-dark:hover {
+	color: $hosfColor;
 	background: whitesmoke;
 }
 
@@ -80,6 +92,7 @@ body {
 
 	.layer {
 		background-color: rgba(20, 49, 96, 0.5);
+		opacity: 0.5;
 		position: absolute;
 		width: 100%;
 		height: 100%;
