--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,7 @@
 @import 'web/styles';
 @import 'mobile/styles';
+@import 'buttons';
 @import url('https://fonts.googleapis.com/css?family=Cabin');
-
-$hosfColor: #10B535;
 
 body {
 	padding: 0;
@@ -44,44 +43,7 @@ body {
 	text-decoration: underline;
 }
 
-/*
-	All designs for the buttons are here
-*/
 
-.btn {
-	display: block;
-	width: 100%;
-	height: auto;
-	font-size: 2.5vh;
-	border-radius: 5px;
-}
-
-.btn-dark, .btn-dark-outline {
-	border-style: solid;
-	border-width: 2px;
-	border-color: $hosfColor;
-	transition-duration: 300ms;
-}
-
-.btn-dark {
-	background: $hosfColor;
-	color: whitesmoke;
-}
-
-.btn-dark-outline {
-	color: $hosfColor;
-	background: whitesmoke;
-}
-
-.btn-dark-outline:hover {
-	background: $hosfColor;
-	color: whitesmoke;
-}
-
-.btn-dark:hover {
-	color: $hosfColor;
-	background: whitesmoke;
-}
 
 /*
 	This is where the map goes, the whole .map and .layer css is temporary
