--- a/scss/mobile/styles.scss
+++ b/scss/mobile/styles.scss
@@ -5,16 +5,22 @@ $sidebarGrid:
 	". . . . . . . . . . . . . ."
 	". . . . i i i i i i . . . .";
 
+$sidebarLandscapeGrid:
+	"a a a a a a a a a a a a a a"
+	". . . . . . . . . . . . . ."
+	"o o o o o o o o o o o o o o"
+	"f f f f f f f f f f f f f f"
+	"w w w w w w w w w w w w w w"
+	". . . . . . . . . . . . . ."
+	". . . . . . . . . . . . . ."
+	". . i i i i i i i i i i . .";
 
-$mobileGrid: "m" "m" "m" "m" "m" "s" "s";
+$portraitGrid: "m" "m" "m" "m" "m" "s" "s";
+$landscapeGrid: "m s" "m s" "m s" "m s" "m s" "m s" "m s";
 
-@media screen and (max-width: 1250px) {
-
+@media screen and (max-device-width: 1024px) {
 	#wrapper {
 		display: grid;
-		grid-template-rows: repeat(7, (100vh / 7));
-		grid-template-columns: 100vw;
-		grid-template-areas: $mobileGrid;
 	}
 
 	.map {
@@ -22,16 +28,40 @@ $mobileGrid: "m" "m" "m" "m" "m" "s" "s";
 	}
 
 	.sidebar {
-		padding: 20px;
-		grid-area: s;
 		display: grid;
+		grid-gap: 10px 0;
+		grid-area: s;
+		padding: 20px;
 		grid-template-columns: repeat(14, 1fr);
 		grid-auto-rows: minmax(0, 100px);
-		grid-template-areas: $sidebarGrid;
 	}
 
 	.content {
 		width: 0;
 		font-size: 0;
+	}
+}
+
+@media screen and (max-device-width: 1024px) and (orientation: landscape) {
+	#wrapper {
+		grid-template-columns: 7fr 3fr;
+		grid-template-rows: repeat(7, (100vh / 7));
+		grid-template-areas: $landscapeGrid;
+	}
+	.sidebar {
+		grid-template-areas: $sidebarLandscapeGrid;
+	}
+}
+
+@media screen and (max-device-width: 1024px) and (orientation: portrait) {
+
+	#wrapper {
+		grid-template-columns: 100vw;
+		grid-template-rows: repeat(7, (100vh / 7));
+		grid-template-areas: $portraitGrid;
+	}
+
+	.sidebar {
+		grid-template-areas: $sidebarGrid;
 	}
 }
