--- a/css/styles.css
+++ b/css/styles.css
@@ -20,55 +20,37 @@
     grid-gap: 10px;
     grid-template-areas: "a"  "."  "." "." "o"  "f"  "w"  "." "."  "c"  "c"  "."  "."  "." "." "." "i" "."; } }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-device-width: 1024px) {
   #wrapper {
-    display: grid;
-    grid-template-rows: repeat(7, 14.28571vh);
-    grid-template-columns: 100vw;
-    grid-template-areas: "m" "m" "m" "m" "m" "s" "s"; }
+    display: grid; }
   .map {
     grid-area: m; }
   .sidebar {
-    padding: 20px;
-    grid-area: s;
     display: grid;
+    grid-gap: 10px 0;
+    grid-area: s;
+    padding: 20px;
     grid-template-columns: repeat(14, 1fr);
-    grid-auto-rows: minmax(0, 100px);
-    grid-template-areas: "a a a a a a a a a a a a a a" "c c c c c c c c c c c c c c" "o o o o . f f f f . w w w w" ". . . . . . . . . . . . . ." ". . . . i i i i i i . . . ."; }
+    grid-auto-rows: minmax(0, 100px); }
   .content {
     width: 0;
     font-size: 0; } }
 
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Cabin', sans-serif; }
+@media screen and (max-device-width: 1024px) and (orientation: landscape) {
+  #wrapper {
+    grid-template-columns: 7fr 3fr;
+    grid-template-rows: repeat(7, 14.28571vh);
+    grid-template-areas: "m s" "m s" "m s" "m s" "m s" "m s" "m s"; }
+  .sidebar {
+    grid-template-areas: "a a a a a a a a a a a a a a" ". . . . . . . . . . . . . ." "o o o o o o o o o o o o o o" "f f f f f f f f f f f f f f" "w w w w w w w w w w w w w w" ". . . . . . . . . . . . . ." ". . . . . . . . . . . . . ." ". . i i i i i i i i i i . ."; } }
 
-.address {
-  grid-area: a; }
-
-.open {
-  grid-area: o; }
-
-.food {
-  grid-area: f; }
-
-.wifi {
-  grid-area: w; }
-
-.content {
-  grid-area: c; }
-  .content h1 {
-    text-align: center; }
-  .content p {
-    font-size: 1.3em; }
-
-.bottom-question {
-  text-align: center;
-  grid-area: i;
-  max-height: 50px;
-  font-size: 2em;
-  text-decoration: underline; }
+@media screen and (max-device-width: 1024px) and (orientation: portrait) {
+  #wrapper {
+    grid-template-columns: 100vw;
+    grid-template-rows: repeat(7, 14.28571vh);
+    grid-template-areas: "m" "m" "m" "m" "m" "s" "s"; }
+  .sidebar {
+    grid-template-areas: "a a a a a a a a a a a a a a" "c c c c c c c c c c c c c c" "o o o o . f f f f . w w w w" ". . . . . . . . . . . . . ." ". . . . i i i i i i . . . ."; } }
 
 /*
 	All designs for the buttons are here
@@ -103,6 +85,37 @@ body {
 .btn-dark:hover {
   color: #10B535;
   background: whitesmoke; }
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Cabin', sans-serif; }
+
+.address {
+  grid-area: a; }
+
+.open {
+  grid-area: o; }
+
+.food {
+  grid-area: f; }
+
+.wifi {
+  grid-area: w; }
+
+.content {
+  grid-area: c; }
+  .content h1 {
+    text-align: center; }
+  .content p {
+    font-size: 1.3em; }
+
+.bottom-question {
+  text-align: center;
+  grid-area: i;
+  max-height: 50px;
+  font-size: 2em;
+  text-decoration: underline; }
 
 /*
 	This is where the map goes, the whole .map and .layer css is temporary
